# trasa

./: .gitignore  README.md  build_all_ghc  cabal.project  stack.yaml  trasa.cabal
.github/workflows/: ci.yml
example/backend/: backend.cabal  default.nix
example/backend/app/: Main.hs
example/common/: common.cabal  default.nix
example/common/src/: Common.hs
example/frontend/: default.nix  frontend.cabal
example/frontend/app/: Main.hs
nix/: chessai-reflex-platform.json  default.nix  disable-template-haskell.nix  fetchNixpkgs.nix  nixpkgs.nix  overrides.nix  reflex-platform.json  reflex-platform.nix  trasa-overlay.nix
src/Trasa/: Core.hs
test/: Main.hs
trasa/: LICENSE  default.nix  trasa.cabal
trasa-client/: default.nix  trasa-client.cabal
trasa-client/src/Trasa/: Client.hs
trasa-client/src/Trasa/Client/: Implicit.hs
trasa-client/test/: Main.hs
trasa-init/: readme.md  trasa-init.cabal
trasa-init/app/: Main.hs
trasa-init/res/: pinned-nixpkgs.nix  trasa-client.nix  trasa-server.nix  trasa.nix
trasa-reflex/: ChangeLog.md  LICENSE  default.nix  trasa-reflex.cabal
trasa-reflex/src/Data/Trasa/: Reflex.hs
trasa-reflex/src/Reflex/: PopState.hs
trasa-reflex/src/Trasa/: Reflex.hs
trasa-reflex/src/Trasa/Reflex/: Implicit.hs
trasa-server/: default.nix  trasa-server.cabal
trasa-server/src/Trasa/: Server.hs
trasa-server/src/Trasa/Server/: Implicit.hs
trasa-server/test/: Main.hs
trasa-th/: default.nix  trasa-th.cabal
trasa-th/src/Trasa/: TH.hs  Test.hs
trasa-th/src/Trasa/TH/: Lexer.hs  Parse.hs  Types.hs
trasa-th/test/: Main.hs
trasa-tutorial/: default.nix  trasa-tutorial.cabal
trasa-tutorial/src/Trasa/: Tutorial.hs
trasa/src/Trasa/: Codec.hs  Core.hs  Error.hs  Method.hs  Tutorial.hs  Url.hs
trasa/src/Trasa/Core/: Implicit.hs
trasa/test/: Doctest.hs  Main.hs
