name:                trasa-client
version:             0.1.0.0
synopsis:            Type safe http requests
license:             MIT
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
copyright:           @2017 Kyle McKean
category:            Web
build-type:          Simple
cabal-version:       >=1.10
description:         Http client integration for trasa

library
  exposed-modules:     Trasa.Client
  build-depends:       base >= 4.9 && < 4.10
                     , bytestring == 0.10.*
                     , binary == 0.8.*
                     , text == 1.2.*
                     , http-types == 0.9.*
                     , http-client == 0.5.*
                     , trasa == 0.1.*
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >= 4.9 && < 4.10
                     , trasa
                     , trasa-client
                     , http-types == 0.9.*
                     , http-client == 0.5.*
                     , unordered-containers == 0.2.*
                     , text == 1.2.*
                     , ip == 0.9.*
                     , aeson == 1.0.*
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/haskell-trasa/trasa