cabal-version: 2.2
name:
  trasa-client
version:
  0.4
synopsis:
  Type safe http requests
description:
  http-client integration for trasa
homepage:
  https://github.com/haskell-trasa/trasa
author:
  Andrew Martin
  Kyle McKean
maintainer:
  Andrew Martin <andrew.thaddeus@gmail.com>
  Kyle McKean <mckean.kylej@gmail.com>
  chessai <chessai1996@gmail.com>
license:
  MIT
license-file:
  LICENSE
copyright:
  © 2017-2019 Andrew Martin
  © 2017-2019 Kyle McKean
category:
  Web
build-type:
  Simple

library
  hs-source-dirs:
    src
  exposed-modules:
    Trasa.Client
    Trasa.Client.Implicit
  build-depends:
    , base >= 4.9 && < 5
    , binary == 0.8.*
    , bytestring == 0.10.*
    , case-insensitive == 1.2.*
    , containers >= 0.5 && < 0.7
    , http-client == 0.5.*
    , http-media >= 0.6 && < 0.8
    , http-types >= 0.9
    , text == 1.2.*
    , trasa == 0.4.*
  default-language:
    Haskell2010

--test-suite test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Main.hs
--  build-depends:       base >= 4.9 && < 5
--                     , trasa
--                     , trasa-client
--                     , http-types
--                     , http-client
--                     , unordered-containers
--                     , text
--                     , ip
--                     , aeson
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/haskell-trasa/trasa
