cabal-version: 2.2
name:
  trasa-init
version:
  0.1
-- synopsis:
-- description:
bug-reports:
  https://github.com/chessai/trasa-init.git
license:
  MIT
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
build-type:
  Simple
extra-source-files:
  changelog.md
  readme.md

executable trasa-init
  hs-source-dirs:
    app
  main-is:
    Main.hs
  build-depends:
    , base >= 4.11 && < 4.15
    , directory
    , file-embed
  ghc-options:
    -Wall -Werror -O2
  default-language:
    Haskell2010
