name: trasa-reflex
version: 0.4.0
synopsis: Reactive Type Safe Routing
license: MIT
license-file: LICENSE
author: Kyle McKean
maintainer: mckean.kylej@gmail.com
copyright: @2017 Kyle McKean
category: Text
build-type: Simple
extra-source-files: ChangeLog.md
cabal-version: >=1.10
description: Reflex-frp integration for trasa

library
  exposed-modules:
      Reflex.PopState
    , Trasa.Reflex
    , Trasa.Reflex.Implicit
  build-depends:
      base >= 4.9 && < 5
    , bytestring == 0.10.*
    , text == 1.2.*
    , http-types >= 0.9
    , http-media >= 0.6 && < 0.8
    , containers == 0.5.*
    , jsaddle > 0.8 && < 0.10
    , ghcjs-dom > 0.7 && < 0.11
    , reflex == 0.5.*
    , reflex-dom == 0.4.*
    , trasa == 0.3.*
    , vinyl >= 0.5 && < 0.9
  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/haskell-trasa/trasa
