name: trasa-server
version: 0.1
synopsis: Type safe web server
homepage: https://github.com/haskell-trasa/trasa#readme
license: BSD3
license-file: LICENSE
author: Kyle McKean
maintainer: mckean.kylej@gmail.com
copyright: 2017 Kyle McKean
category: Web
build-type: Simple
cabal-version: >=1.10
description: WAI integration for trasa

library
  hs-source-dirs: src
  exposed-modules:
    Trasa.Server
  build-depends:
      base >= 4.7 && < 5
    , bytestring == 0.10.*
    , text == 1.2.*
    , wai == 3.2.*
    , http-types == 0.9.*
    , case-insensitive == 1.2.*
    , containers == 0.5.*
    , mtl == 2.2.*
    , trasa
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends: 
      base
    , trasa
    , trasa-server
    , tasty
    , tasty-quickcheck
    , tasty-hunit
    , bytestring
    , text
    , vinyl
    , doctest
    , warp
    , http-client
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/haskell-trasa/trasa