cabal-version: 2.2
name:
  trasa-server
version:
  0.5.1
synopsis:
  Type safe web server
description:
  WAI integration for trasa
homepage:
  https://github.com/haskell-trasa/trasa
author:
  Andrew Martin
  Kyle McKean
maintainer:
  Andrew Martin <andrew.thaddeus@gmail.com>
  Kyle McKean <mckean.kylej@gmail.com>
  chessai <chessai1996@gmail.com>
license:
  MIT
license-file:
  LICENSE
copyright:
  © 2017-2019 Andrew Martin
  © 2017-2019 Kyle McKean
category:
  Web
build-type:
  Simple

library
  hs-source-dirs:
    src
  exposed-modules:
      Trasa.Server
    , Trasa.Server.Implicit
  build-depends:
    , base >= 4.9 && < 5
    , bytestring == 0.10.*
    , case-insensitive == 1.2.*
    , containers >= 0.5 && < 0.7
    , http-media >= 0.6 && < 0.8
    , http-types >= 0.9 
    , mtl == 2.2.*
    , text == 1.2.*
    , trasa == 0.4.*
    , wai == 3.2.2.*
    , wai-extra
  default-language:
    Haskell2010

--test-suite test
--  type: exitcode-stdio-1.0
--  hs-source-dirs: test
--  main-is: Main.hs
--  build-depends: 
--      base
--    , trasa
--    , trasa-server
--    , tasty
--    , tasty-quickcheck
--    , tasty-hunit
--    , bytestring
--    , text
--    , quantification
--    , doctest
--    , warp
--    , http-client
--  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/haskell-trasa/trasa
