name:                trasa-th
version:             0.1
synopsis:            Template haskell to generate trasa routes
license:             MIT
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
copyright:           @2017 Kyle McKean
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Trasa.TH, Trasa.Test
  build-depends:       base >=4.9 && <4.10
                     , template-haskell == 2.11.*
                     , trasa == 0.2.*
  hs-source-dirs:      src
  default-language:    Haskell2010
