name:                trasa-th
version:             0.1
synopsis:            Template haskell to generate trasa routes
license:             MIT
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
copyright:           @2017 Kyle McKean
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Trasa.TH.Types
                     , Trasa.TH.Lexer
                     , Trasa.TH.Parse
                     , Trasa.TH
  build-depends:       base >=4.9 && < 5.0
                     , template-haskell == 2.12.*
                     , containers >= 0.5
                     , megaparsec == 5.*
                     , trasa == 0.3.*
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , trasa
                     , trasa-th
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

