cabal-version: 2.2
name:
  trasa-tutorial
version:
  0.4
synopsis:
  Type-Safe Web Routing Tutorial
description:
  Tutorial module/docs for trasa
homepage:
  https://github.com/haskell-trasa/trasa
author:
  Andrew Martin
  Kyle McKean
license:
  MIT
license-file:
  LICENSE
copyright:
  © 2017-2019 Andrew Martin
  © 2017-2019 Kyle McKean
category:
  Web
build-type:
  Simple

library
  hs-source-dirs:
    src
  exposed-modules:
    Trasa.Tutorial
  build-depends:
    , base >= 4.9 && < 5
    , text >= 2.0 && < 2.1
    , trasa == 0.4.*
  default-language:
    Haskell2010

source-repository head
  type:     git
  location: https://github.com/haskell-trasa/trasa
