name: trasa
version: 0.1
synopsis: Type Safe Web Routing
homepage: https://github.com/haskell-trasa/trasa#readme
license: BSD3
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2017 Andrew Martin
category: Web
build-type: Simple
cabal-version: >=1.10
description:
  This library is a solution for http-based routing and dispatch. It's
  goals are similar to the goals of `servant`. However, `trasa` relies
  on very different mechanisms to accomplish this. There are no typeclasses
  in this library, and there is a single closed type family that is provided
  as a convenience. All of the real work is accomplish with GADTs, 
  universal quantification, and plain old haskell data types.

library
  hs-source-dirs:      src
  exposed-modules:
    Trasa.Core
    Trasa.Tutorial
  build-depends:
      base >= 4.7 && < 5
    , bytestring == 0.10.*
    , binary == 0.8.*
    , text == 1.2.*
    , vinyl == 0.5.*
    , http-types == 0.9.*
    , unordered-containers >= 0.2 && < 0.3
  default-language:    Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends: 
      base
    , trasa
    , tasty
    , tasty-quickcheck
    , tasty-hunit
    , bytestring
    , text
    , vinyl
    , doctest
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/haskell-trasa/trasa