name: trasa
version: 0.3
synopsis: Type Safe Web Routing
homepage: https://github.com/haskell-trasa/trasa#readme
license: BSD3
license-file: LICENSE
author: Kyle McKean
maintainer: mckean.kylej@gmail.com
copyright: 2017 Kyle McKean
category: Web
build-type: Simple
cabal-version: >=1.10
description:
  This library is a solution for http-based routing and dispatch. Its
  goals are similar to the goals of `servant`, however, `trasa` relies
  on very different mechanisms to accomplish those goals. All typeclasses
  in this library are optional. All of the real work is accomplished with GADTs, 
  universal quantification, and plain old haskell data types.

library
  hs-source-dirs:      src
  exposed-modules:
    Trasa.Method
    Trasa.Url
    Trasa.Codec
    Trasa.Error
    Trasa.Core
    Trasa.Core.Implicit
    Trasa.Tutorial
  build-depends:
      base >= 4.7 && < 5
    , bytestring == 0.10.*
    , binary == 0.8.*
    , text == 1.2.*
    , vinyl >= 0.5 && < 0.9
    , hashable == 1.2.*
    , http-types >= 0.9
    , http-media >= 0.6 && < 0.8
    , unordered-containers >= 0.2 && < 0.3
  default-language:    Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends: 
      base
    , trasa
    , tasty
    , tasty-quickcheck
    , tasty-hunit
    , bytestring
    , text
    , vinyl
    , doctest
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/haskell-trasa/trasa
