cabal-version: 2.2
name:
  trasa
version:
  0.4.1
synopsis:
  Type Safe Web Routing
description:
  This library is a solution for http-based routing and dispatch. Its
  goals are similar to the goals of `servant`, however, `trasa` relies
  on very different mechanisms to accomplish those goals. All typeclasses
  in this library are optional. All of the real work is accomplished with GADTs, 
  universal quantification, and plain old haskell data types.
homepage:
  https://github.com/haskell-trasa/trasa
author:
  Andrew Martin
  Kyle McKean
maintainer:
  Andrew Martin <andrew.thaddeus@gmail.com>
  Kyle McKean <mckean.kylej@gmail.com>
  chessai <chessai1996@gmail.com>
license:
  MIT
license-file:
  LICENSE
copyright:
  © 2017-2019 Andrew Martin
  © 2017-2019 Kyle McKean
category:
  Web
build-type:
  Simple

library
  hs-source-dirs:
    src
  exposed-modules:
    Trasa.Method
    Trasa.Url
    Trasa.Codec
    Trasa.Error
    Trasa.Core
    Trasa.Core.Implicit
--    Trasa.Tutorial
  build-depends:
    , base >= 4.9 && < 5
    , binary == 0.8.*
    , bytestring == 0.10.*
    , hashable == 1.2.*
    , http-media >= 0.6 && < 0.8
    , http-types >= 0.9
    , quantification == 0.5.0
    , text == 1.2.*
    , unordered-containers >= 0.2 && < 0.3
  default-language:
    Haskell2010

test-suite doctest
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Doctest.hs
  build-depends:
    , base
    , doctest
  default-language:
    Haskell2010

--test-suite test
--  type:
--    exitcode-stdio-1.0
--  hs-source-dirs:
--    test
--  main-is:
--    Main.hs
--  build-depends:
--      base
--    , trasa
--    , tasty
--    , tasty-quickcheck
--    , tasty-hunit
--    , bytestring
--    , text
--    , quantification
--  ghc-options:
--    -threaded
--    -rtsopts -with-rtsopts=-N
--  default-language:
--    Haskell2010

source-repository head
  type:     git
  location: https://github.com/haskell-trasa/trasa
