name:                backend
version:             0.1.0.0
synopsis:            Backend for the trasa example
license:             MIT
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
copyright:           @2017 Kyle McKean
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable backend
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
                     , vinyl == 0.5.*
                     , containers == 0.5.*
                     , stm == 2.4.*
                     , wai == 3.2.*
                     , wai-extra == 3.0.*
                     , warp == 3.2.*
                     , trasa
                     , trasa-server
                     , common
  hs-source-dirs:      app
  default-language:    Haskell2010
