name:                common
version:             0.1.0.0
synopsis:            Common code for the trasa example
license:             MIT
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
copyright:           @2017 Kyle McKean
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Common
  build-depends:       base >=4.9 && <4.10
                     , bytestring == 0.10.*
                     , text == 1.2.*
                     , trasa
  hs-source-dirs:      src
  default-language:    Haskell2010
