name:                frontend
version:             0.1.0.0
synopsis:            Frontend for the trasa example
license:             MIT
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
copyright:           @2017 Kyle McKean
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable frontend
  main-is:             Main.hs
  build-depends:       base >=4.9 && < 5.0
                     , file-embed == 0.0.*
                     , reflex-dom == 0.4.*
                     , common
  hs-source-dirs:      app
  default-language:    Haskell2010
