cabal-version: 2.2
name:
  frontend
version:
  0.1
synopsis:
  frontend for the trasa example
homepage:
  https://github.com/haskell-trasa/trasa
author:
  Andrew Martin
  Kyle McKean
maintainer:
  Andrew Martin <andrew.thaddeus@gmail.com>
  Kyle McKean <mckean.kylej@gmail.com>
  chessai <chessai1996@gmail.com>
license:
  MIT
license-file:
  LICENSE
copyright:
  © 2017-2019 Andrew Martin
  © 2017-2019 Kyle McKean
category:
  Web
build-type:
  Simple

executable frontend
  hs-source-dirs:
    app
  main-is:
    Main.hs
  build-depends:
    , base >= 4.9 && < 5
    , file-embed == 0.0.*
    , reflex-dom == 0.5.*
    , common
  default-language:
    Haskell2010
